# xfce4-weather-plugin

./: .cppcheck-false-positives  .cppcheck.cfg  .gitignore  .scan-build-false-positives  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  build_weather_plugin.txt  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  libtool  ltmain.sh  meson.build  meson_options.txt
icons/: Makefile.am  Makefile.in  meson.build
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/liquid/: Makefile  Makefile.am  Makefile.in  theme.info
icons/liquid-dark/: Makefile.am  theme.info
icons/liquid-dark/128/: Makefile.am
icons/liquid-dark/22/: Makefile.am
icons/liquid-dark/48/: Makefile.am
icons/liquid/128/: Makefile.am
icons/liquid/22/: Makefile.am
icons/liquid/48/: Makefile.am
icons/scalable/: Makefile.am
icons/simplistic/: Makefile.am  theme.info
icons/simplistic/128/: Makefile.am
icons/simplistic/22/: Makefile.am
icons/simplistic/48/: Makefile.am
panel-plugin/: Makefile.am  Makefile.in  config_dialog.c  config_dialog.h  debug.txt  debug_print.h  get_data.c  get_data.h  http_client.c  http_client.h  icon.c  icon.h  meson.build  parsers.c  parsers.h  plugin.c  plugin.h  scrollbox.c  scrollbox.h  search_dialog.c  search_dialog.h  summary_window.c  summary_window.h  translate.c  translate.h  weather-config.c  weather-config.gresource.xml  weather-config.h  weather-config.ui  weather-data.c  weather-data.h  weather-debug.c  weather-debug.h  weather-http.c  weather-http.h  weather-icon.c  weather-icon.h  weather-parsers.c  weather-parsers.h  weather-scrollbox.c  (+11 more)
po/: ChangeLog  LINGUAS  Makefile.in  Makefile.in.in  Makevars  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.gmo  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.gmo  fr.po  gl.po  he.po  hr.po  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.gmo  lt.po  lv.po  (+33 more)
