liquiddir = $(datadir)/xfce4/weather/icons/liquid

liquid_DATA = 99.png			\
	CLOUD.png			\
	FOG.png				\
	LIGHTCLOUD.png			\
	LIGHTRAIN.png			\
	LIGHTRAINSUN.png		\
	LIGHTRAINTHUNDER.png		\
	LIGHTRAINTHUNDERSUN.png		\
	PARTLYCLOUD.png			\
	RAIN.png			\
	RAINTHUNDER.png			\
	SLEET.png			\
	SLEETSUN.png			\
	SLEETSUNTHUNDER.png		\
	SLEETTHUNDER.png		\
	SNOW.png			\
	SNOWSUN.png			\
	SNOWSUNTHUNDER.png		\
	SNOWTHUNDER.png			\
	SUN.png				\
	CLOUD-night.png			\
	LIGHTCLOUD-night.png		\
	LIGHTRAINSUN-night.png		\
	LIGHTRAINTHUNDERSUN-night.png	\
	PARTLYCLOUD-night.png		\
	SNOWSUN-night.png		\
	SUN-night.png

EXTRA_DIST =								\
	$(liquid_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
