size = 128

iconsdir = $(datadir)/xfce4/weather/icons/liquid/$(size)

icons_DATA = nodata.png                 \
    cloud.png                           \
    fog.png                             \
    lightcloud.png                      \
    lightcloud-night.png                \
    lightrain.png                       \
    lightrainsun.png                    \
    lightrainsun-night.png              \
    lightrainthunder.png                \
    lightrainthundersun.png             \
    lightrainthundersun-night.png       \
    partlycloud.png                     \
    partlycloud-night.png               \
    rain.png                            \
    rainthunder.png                     \
    sleet.png                           \
    sleetsun.png                        \
    sleetsun-night.png                  \
    sleetsunthunder.png                 \
    sleetsunthunder-night.png           \
    sleetthunder.png                    \
    snow.png                            \
    snowsun.png                         \
    snowsun-night.png                   \
    snowsunthunder.png                  \
    snowsunthunder-night.png            \
    snowthunder.png                     \
    sun.png                             \
    sun-night.png

EXTRA_DIST =                            \
    $(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
