size = 22

iconsdir = $(datadir)/xfce4/weather/icons/simplistic/$(size)

icons_DATA = nodata.png                 \
    cloud.png                           \
    fog.png                             \
    fog-night.png                       \
    lightcloud.png                      \
    lightcloud-night.png                \
    lightrain.png                       \
    lightrain-night.png                 \
    lightrainsun.png                    \
    lightrainsun-night.png              \
    lightrainthunder.png                \
    lightrainthunder-night.png          \
    lightrainthundersun.png             \
    lightrainthundersun-night.png       \
    partlycloud.png                     \
    partlycloud-night.png               \
    rain.png                            \
    rain-night.png                      \
    rainthunder.png                     \
    rainthunder-night.png               \
    sleet.png                           \
    sleet-night.png                     \
    sleetsun.png                        \
    sleetsun-night.png                  \
    sleetsunthunder.png                 \
    sleetsunthunder-night.png           \
    sleetthunder.png                    \
    sleetthunder-night.png              \
    snow.png                            \
    snow-night.png                      \
    snowsun.png                         \
    snowsun-night.png                   \
    snowsunthunder.png                  \
    snowsunthunder-night.png            \
    snowthunder.png                     \
    snowthunder-night.png               \
    sun.png                             \
    sun-night.png

EXTRA_DIST =                            \
    $(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
